syntax = "proto3";

option java_package = "org.eclipse.tracecompass.incubator.internal.trace.server.jersey.rest.core.services";

message TimeRequestFilter {
    int64 start = 1;
    int64 end = 2;
    int32 count = 3;
}

message SelectionTimeRequestFilter {
    int64 start = 1;
    int64 end = 2;
    int32 count = 3;
    repeated int64 items = 4;
}

message XYSeries {
    string name = 1;
    repeated int64 x = 2;
    repeated double y = 3;
}

message XYModelResponse {
    repeated XYSeries model = 1;
    string status = 2;
    string statusMessage = 3;
}

message XYTree {
    int64 id = 1;
    int64 parentId = 2;
}

message TreeXYModelResponse {
    repeated XYTree model = 1;
    string status = 2;
    string statusMessage = 3;
}

message ProtoTrace {
    string id = 1;
    string name = 2;
    int64 start = 3;
    int64 end = 4;
}

message EmptyParameters {

}

message TraceParameters {
    string name = 1;
    string path = 2;
}

service CpuUsageService {
    rpc fetchTree(TimeRequestFilter) returns (TreeXYModelResponse) {}
    rpc fetchXY(SelectionTimeRequestFilter) returns (XYModelResponse) {}
}

service TraceService {
    rpc getTraces(EmptyParameters) returns (ProtoTrace) {}
    rpc openTrace(TraceParameters) returns (ProtoTrace) {}
}
