syntax "proto3"

message TimeQueryFilter {
    int64 start = 1;
    int64 end = 2;
    int32 count = 3;
}

message SelectionTimeQueryFilter {
    int64 start = 1;
    int64 end = 2;
    int32 count = 3;
    repeated int64 items = 4;
}

message XYSeries {
    string name = 1;
    repeated int64 x = 2;
    repeated int32 y = 3;
}

message CpuUsageResponse {
    XYSeries model = 1;
    string status = 2;
    string statusMessage = 3;
}

service CpuUsageService {
    rpc fetchTree(TimeQueryFilter) returns () {}
    rpc fetchXY(SelectionTimeQueryFilter) returns () {}
}